yaml/prod/cncf-demo.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: cncf-demo
  name: cncf-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cncf-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cncf-demo
      name: cncf-demo
    spec:
      containers:
        - image: index.docker.io/vfarcic/cncf-demo:latest
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          name: main
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: cncf-demo
  name: cncf-demo
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: cncf-demo
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: cncf-demo
  name: cncf-demo
spec:
  ingressClassName: traefik
  rules:
    - host: cncf-demo-dev.sillydemo.com
      http:
        paths:
          - backend:
              service:
                name: cncf-demo
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
